fix: raise title bar z-index to 100

--- a/css/main.css
+++ b/css/main.css
@@ -110,7 +110,7 @@ h1, h2, h3, h4, h5, h6 {
 
     position: sticky;
     top: 0;
-    z-index: 1;
+    z-index: 100;
 
     backdrop-filter: blur(16px);
     background: var(--color-title-bar-background);
